recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: not found: value levels
    if(levels == 0)
       ^Sierpinski:13: error: not found: value levels
        sierpinski(levels-1,length/2)
                   ^Sierpinski:16: error: not found: value levels
	   sierpinski(levels-1,length/2)
                      ^Sierpinski:19: error: not found: value levels
        sierpinski(levels-1,length/2)
                   ^